<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titulo"
        android:text="@string/strCalculadora"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="30sp"
        android:textAlignment="viewEnd"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        tools:text="@string/strEntrada">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent">

        <!--fila1-->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvResultado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str7">

            </Button>

            <Button
                android:id="@+id/btn8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str8">

            </Button>

            <Button
                android:id="@+id/btn9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str9">

            </Button>

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/strDividir">

            </Button>

        </LinearLayout>
        <!--fila2-->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str4">

            </Button>

            <Button
                android:id="@+id/btn5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str5">

            </Button>

            <Button
                android:id="@+id/btn6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str6">

            </Button>

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/strMultiplicar">

            </Button>


        </LinearLayout>

        <!--fila3-->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str1">

            </Button>

            <Button
                android:id="@+id/btn2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str2">

            </Button>

            <Button
                android:id="@+id/btn3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str3">

            </Button>

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/strRestar">

            </Button>
        </LinearLayout>
        <!--fila3-->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str1">

            </Button>

            <Button
                android:id="@+id/btn0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/str0">

            </Button>

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/strIgual">

            </Button>

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5sp"
                android:backgroundTint="@color/verde"
                android:text="@string/strSumar">

            </Button>
        </LinearLayout>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>