<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelefonoActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde"
        android:text="@string/strTelefonoTitulo"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        tools:text="prueba">

    </TextView>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultado">

    </Button>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str2"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/tvResultado">

    </Button>

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str3"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/tvResultado">

    </Button>

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str4"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1">

    </Button>

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str5"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn1">

    </Button>

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str6"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn1">

    </Button>

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str7"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4">

    </Button>

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str8"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn4">

    </Button>

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str9"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn4">

    </Button>

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        android:text="@string/str0"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn7">

    </Button>

    <Button
        android:id="@+id/btnllamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/verde"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn0">

    </Button>

    <ImageButton
        android:id="@+id/btnllamar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/verde"
        android:src="@drawable/logo_llamar"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn0">

    </ImageButton>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/verde"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnllamar"
        app:layout_constraintTop_toBottomOf="@id/btn0">

    </Button>

    <ImageButton
        android:id="@+id/btnEliminar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/verde"
        android:src="@drawable/eliminar_logo"
        app:layout_constraintStart_toEndOf="@id/btnllamar"
        app:layout_constraintTop_toBottomOf="@id/btn0">

    </ImageButton>


</androidx.constraintlayout.widget.ConstraintLayout>