<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SaludarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton"
        android:text="@string/strSaludar_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/TelefonoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton"
        android:text="@string/strTelefonoTitulo"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SaludarAdd">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CalculadoraAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton"
        android:text="@string/strCalculadoraTitulo"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TelefonoAdd">

    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/IMCAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton"
        android:text="IMC App"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculadoraAdd">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>